updated unity version added upm git pusher dep

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,17 @@
 {
   "dependencies": {
-    "com.unity.package-manager-ui": "2.1.2",
-    "com.unity.render-pipelines.lightweight": "5.7.2",
+    "com.gemserk.upmgitpusher": "ssh://git@github.com/acoppes/upmgitpusher.git#com.gemserk.upmgitpusher-0.0.6",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.vscode": "1.1.4",
+    "com.unity.render-pipelines.lightweight": "7.3.1",
+    "com.unity.test-framework": "1.1.13",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.0.0",
+    "com.unity.timeline": "1.2.6",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
@@ -34,5 +41,11 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
+  },
+  "lock": {
+    "com.gemserk.upmgitpusher": {
+      "revision": "com.gemserk.upmgitpusher-0.0.6",
+      "hash": "435320349178ec1394f3a581ea854fcc8b1f4f9b"
+    }
   }
 }
